--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaxiEasyUa"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBGVwoaiyxqtFBW_ISVTNz_EVhJc94dmeo" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
