--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk 19
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 101
+        versionName 'add Visicom'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
