--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
         <activity android:name=".GoogleSignInActivity" />
-        <activity android:name=".FirebaseSignIn" />
+        <activity android:name=".ui.start.FirebaseSignIn" />
         <activity android:name=".FirebaseUIActivity" />
     </application>
 
