--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-analytics'
+
+
+        implementation 'org.osmdroid:osmdroid-android:6.1.16'
+
 }
