--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -25,10 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaxiEasyUa"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -53,9 +57,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
-        <activity android:name=".GoogleSignInActivity" />
         <activity android:name=".ui.start.FirebaseSignIn" />
-        <activity android:name=".FirebaseUIActivity" />
+        <activity android:name=".OpenStreetMapActivity" />
     </application>
 
 </manifest>
