--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         google()  // Google's Maven repository
 
         mavenCentral()  // Maven Central repository
-
+        mavenLocal()
     }
     dependencies {
 
