--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,10 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
-        <activity android:name=".ui.start.FirebaseSignIn" />
-        <activity android:name=".OpenStreetMapActivity" />
+        <activity android:name=".ui.start.FirebaseSignIn"
+            android:exported="true"/>
+        <activity android:name=".ui.open_map.OpenStreetMapActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
