--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
             android:exported="true"/>
         <activity android:name=".ui.open_map.OpenStreetMapActivity"
             android:exported="true"/>
+        <activity android:name=".ui.start.StartActivityO" />
+        <activity android:name=".ui.start.StartActivityK" />
     </application>
 
 </manifest>
