--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk 26
         targetSdk 33
-        versionCode 1609
-        versionName '1.609'
+        versionCode 1700
+        versionName '1.700'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resConfigs "en", "ru", "uk"  // порядок элементов списка не имеет значения
@@ -69,4 +69,7 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
 
     implementation 'com.github.MKergall:osmbonuspack:6.9.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
