--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,26 +6,23 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -45,31 +42,37 @@
             android:value="@string/visicom_key_storage" />
 
         <activity
-            android:name=".ui.start.StartActivity"
+            android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TaxiEasyUa.NoActionBar">
+            android:theme="@style/Theme.TaxiEasyUa.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.start.FirebaseSignIn"
+            android:screenOrientation="portrait"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
-        <activity android:name=".ui.start.FirebaseSignIn"
-            android:theme="@style/Theme.TaxiEasyUa.NoActionBar"
-            android:exported="true"/>
-        <activity android:name=".ui.open_map.OpenStreetMapActivity"
-            android:theme="@style/Theme.TaxiEasyUa.NoActionBar"
-            android:exported="true"/>
-        <activity android:name=".ui.start.StopActivity" />
-        <activity android:name=".ui.start.UpdateActivity" />
+        <activity
+            android:name=".ui.open_map.OpenStreetMapActivity"
+            android:screenOrientation="portrait"
+            android:exported="true"
+            android:theme="@style/Theme.TaxiEasyUa.NoActionBar" />
+        <activity android:name=".ui.start.StopActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.start.UpdateActivity"
+            android:screenOrientation="portrait"/>
 
         <receiver android:name=".NetworkChangeReceiver" />
     </application>
+
+
 
 </manifest>
