--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk 26
         targetSdk 33
-        versionCode 1744
-        versionName '1.744'
+        versionCode 1745
+        versionName '1.745'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
@@ -98,4 +98,6 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.7.0'
 
     implementation 'com.google.android.play:core:1.10.3'
+
+    implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
 }
