--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-
-        classpath 'com.google.gms:google-services:4.3.15'
-
+        classpath 'com.google.gms:google-services:4.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.1'
     }
 }
 plugins {
