--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
@@ -33,7 +35,7 @@
 
 
     <application
-        android:name=".utils.activ_push.MyApplication"
+        android:name=".androidx.startup.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -109,9 +111,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.start.UpdateActivity"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.start.GoogleSignInActivity"
-            android:screenOrientation="portrait" />
+
         <receiver android:name=".NetworkChangeReceiver" />
 
         <activity android:name=".ui.open_map.OpenStreetMapVisicomActivity"
@@ -127,7 +127,21 @@
             tools:ignore="Instantiatable" />
 
         <receiver android:name=".NetworkChangeReceiver" />
-
+        <provider
+            android:name=".androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.InitializationProvider"
+            android:exported="false"
+            android:enabled="true">
+        </provider>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
     </application>
 
