--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <!-- Определение SplashScreen API -->
     <meta-data
         android:name="com.google.android.gms.safetynet.SafetyNetSplashConfig"
@@ -52,13 +51,15 @@
         <service
             android:name=".utils.activ_push.MyService"
             android:exported="false" />
-
         <receiver android:name=".utils.activ_push.BootReceiver"
+            android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+
+
 
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
