--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
 
 android {
     namespace 'com.taxi.easy.ua'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.taxi.easy.ua"
         minSdk 26
-        targetSdk 33
-        versionCode 1751
-        versionName '1.751'
+        targetSdk 34
+        versionCode 1752
+        versionName '1.752'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
@@ -38,12 +38,15 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.core:core:1.13.1'
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'org.chromium.net:cronet-embedded:119.6045.31'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -54,21 +57,20 @@ dependencies {
 
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment:2.5.2'
-    implementation 'androidx.navigation:navigation-ui:2.5.2'
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.2'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-ui:2.7.7'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'androidx.annotation:annotation:1.8.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation platform('com.google.firebase:firebase-bom:33.1.1')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-crashlytics:19.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:19.0.2'
 
 
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
@@ -89,20 +91,23 @@ dependencies {
             because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
         }
     }
-    implementation 'com.google.android.gms:play-services-base:18.2.0'
-    implementation 'com.google.android.gms:play-services-wallet:19.2.1'
+    implementation 'com.google.android.gms:play-services-base:18.5.0'
+    implementation 'com.google.android.gms:play-services-wallet:19.4.0'
 
-    implementation "androidx.room:room-runtime:2.4.0" // Убедитесь, что версия соответствует вашей версии Room
-    annotationProcessor "androidx.room:room-compiler:2.4.0" // То же касается версии здесь
+    implementation "androidx.room:room-runtime:2.6.1" // Убедитесь, что версия соответствует вашей версии Room
+    annotationProcessor "androidx.room:room-compiler:2.6.1" // То же касается версии здесь
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.work:work-runtime:2.7.0'
+    implementation 'androidx.work:work-runtime:2.9.0'
 
-    implementation 'com.google.android.play:core:1.10.3'
+
+    implementation 'com.google.android.play:asset-delivery:2.2.2'
+    implementation 'com.google.android.play:feature-delivery:2.1.0'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:app-update:2.1.0'
 
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
 
     implementation "androidx.startup:startup-runtime:1.1.1"
-
 }
