--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.taxi.easy.ua">
+    <!-- Разрешения -->
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
@@ -27,6 +28,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+        tools:ignore="ProtectedPermissions" />
     <!-- Определение SplashScreen API -->
     <meta-data
         android:name="com.google.android.gms.safetynet.SafetyNetSplashConfig"
@@ -44,7 +47,7 @@
         android:supportsRtl="true"
         android:enableOnBackInvokedCallback="true"
         android:theme="@style/Theme.TaxiEasyUa"
-        tools:targetApi="31">
+        tools:targetApi="tiramisu">
 
         <service android:name=".utils.notify.NotificationHelper$UpdateService" />
 
@@ -143,6 +146,17 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <service android:name=".utils.notify.MyNotificationListenerService"
+            android:exported="true"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".utils.notify.MyNotificationListenerJobIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
     </application>
 
