--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.taxi.easy.ua"
         minSdk 26
         targetSdk 34
-        versionCode 1755
-        versionName '1.755'
+        versionCode 1756
+        versionName '1.756'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resourceConfigurations += ['en', 'ru', 'uk']
@@ -110,4 +110,7 @@ dependencies {
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
 
     implementation "androidx.startup:startup-runtime:1.1.1"
+
+    implementation 'com.google.firebase:firebase-messaging:24.0.0' // Замените версию на актуальную
+
 }
